@@ -4,6 +4,10 @@
 # Publication 180-1, Secure Hash Standard,  1995 April 17
 # http://www.itl.nist.gov/div897/pubs/fip180-1.htm
 
+import warnings
+warnings.filterwarnings("ignore", "the sha module is deprecated.*",
+                        DeprecationWarning)
+
 import sha
 import unittest
 from test import test_support
